# gamemaps-parser

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  gamemaps_parser.c  gamemaps_parser.h  gamemaps_parser_internal.h
test/: CMakeLists.txt  tests.c  utils.c  utils.h
